style.css
body {
    font-size: 1.5em;
    margin: 0;
}

h2 {
    text-align: center;
    margin: 30px 0px 0px;
}

.anchor {
    display: block;
    position: relative;
    top: -150px;
    visibility: hidden;
}

.block-contacts {
    display: flex;
    flex-wrap: nowrap;
    justify-content: space-between;
}

.block-row {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
}

.container {
    max-width: 1000px;
    margin: 0px auto;
    margin-top: 180px;
    padding: 0px 15px;
    background-color: white;
}

.footer {
    background-color: rgb(43, 33, 33);
    color: white;
    font-size: 1em;
    padding: 1.5em;
    text-align: center;
}

.header {
    background-color: black;
    position: fixed;
    padding: 60px 0px 0px;
    text-align: center;
    width: 100%;
}

.header h1 {
    margin: 0px 0px 20px;
    color: white;
}

.info-contant {
    display: flex;
    flex-direction: row;
}

.info-contant {
    display: flex;
    flex-direction: row;
}


.info-right {
    margin-right: 40px;
}

.info-right a:link {
    color: black;
}

.info-right a:visited {
    color: black;
}

.main-div {
    display: flex;
    flex-direction: column;
}

.menu a:link {
    color: blanchedalmond;
    padding: 20px;
}

.menu a:visited {
    padding: 20px;
    color: blanchedalmond;
}

.menu a:hover {
    border-radius: 10px 10px 0px 0px;
    padding: 15px 20px 1px 20px;
    background-color: white;
    height: 10px;
    color: black;
}

.string-right {
    margin: 40px;
}

